Fix another contrast error

--- a/static/css/web.css
+++ b/static/css/web.css
@@ -461,7 +461,7 @@ hr {
 }
 
 .text-success { color: #3d9970; /* olive */ }
-.text-important { color: #0074d9; /* blue */ }
+.text-important { color: #0038d9; /* blue */ }
 .text-muted { color: #555; /* dark gray */ }
 .text-danger { color: #800000; /* maroon */  }
 .text-warning { color: #001f3f; /* navy */ }
